# feedcast

./: .gitignore  Makefile  README.md  pyproject.toml
config/: feeds.yaml  feeds.yaml.example  llm.yaml  llm.yaml.example  podcast.yaml  podcast.yaml.example
output/: .gitkeep
src/rss_podcast/: __init__.py  cli.py  config.py
src/rss_podcast/podcast/: __init__.py  llm_text_normalizer.py  models.py  prompts.py  script_generator.py  text_normalizer.py  tts_engine.py  tts_engine_fish_speech.py
src/rss_podcast/scraper/: __init__.py  article_scraper.py  models.py  rss_fetcher.py
src/rss_podcast/storage/: __init__.py  article_store.py  podcast_store.py
tests/: conftest.py  test_storage.py
tests/test_podcast/: __init__.py  test_models.py
tests/test_scraper/: test_models.py
voices/: .gitkeep
